[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Options.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/xolonium-regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Images/Backgrounds/Bench.jpg" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 37
font_data = ExtResource( 2 )

[node name="Options" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 55.0
custom_colors/font_color = Color( 0.129412, 0.0980392, 0.658824, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backgroundlbl" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -270.0
margin_top = 382.0
margin_right = -82.0
margin_bottom = 419.0
custom_colors/font_color = Color( 0.129412, 0.0980392, 0.658824, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Background"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Balllbl" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -270.0
margin_top = 250.0
margin_right = -82.0
margin_bottom = 287.0
custom_colors/font_color = Color( 0.129412, 0.0980392, 0.658824, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Ball"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Barrierlbl" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -270.0
margin_top = 112.0
margin_right = -82.0
margin_bottom = 149.0
custom_colors/font_color = Color( 0.129412, 0.0980392, 0.658824, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Barrier"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundSelecter" type="OptionButton" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 110.0
margin_top = 382.0
margin_right = 337.0
margin_bottom = 425.0
custom_colors/font_color = Color( 0.129412, 0.0980392, 0.658824, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BallSelecter" type="OptionButton" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 110.0
margin_top = 250.0
margin_right = 338.0
margin_bottom = 293.0
custom_colors/font_color = Color( 0.129412, 0.0980392, 0.658824, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Barrier" type="CheckButton" parent="."]
margin_left = 622.0
margin_top = 112.0
margin_right = 699.0
margin_bottom = 152.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 1024, 600 )
rotation = 3.14159
scale = Vector2( 0.26, 0.26 )
z_index = -10
texture = ExtResource( 3 )
centered = false

[node name="Exit" type="Button" parent="."]
margin_left = 430.0
margin_top = 501.0
margin_right = 622.0
margin_bottom = 549.0
custom_colors/font_color = Color( 0.129412, 0.0980392, 0.658824, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="BackgroundSelecter" to="." method="_on_BackgroundSelecter_item_selected"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
